test/modules/shadowing/issue-19167-2-f.good
issue-19167-2-f.chpl:22: In function 'main':
issue-19167-2-f.chpl:23: error: ambiguous call 'f()'
issue-19167-2-f.chpl:2: note: candidates are: f()
issue-19167-2-f.chpl:6: note:                 f()
